--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  CHANGES:

  NEW FEATURES:

  IMPROVEMENTS:

  BUG FIXES:

    * Fix SystemError in ``_patiencediff_c`` module by calling
      PyErr_NoMemory() before returning NULL in PatienceSequenceMatcher_new.
      (Andrew Bennetts, #303206)

  DOCUMENTATION:

  API CHANGES:

  TESTING:

  INTERNALS:


bzr 1.10rc1 2008-11-28
----------------------

This release of Bazaar focusses on performance improvements when pushing
and pulling revisions, both locally and to remote networks.  The popular
``shelve`` and ``unshelve`` commands, used to interactively revert and
restore work in progress, have been merged from bzrtools into the bzr
core.  There are also bug fixes for portability, and for stacked branches.

  NEW FEATURES:

    * New ``commit_message_template`` hook that is called by the commit 
      code to generate a template commit message. (Jelmer Vernooij)

    * New `shelve` and `unshelve` commands allow undoing and redoing changes.
      (Aaron Bentley)

  IMPROVEMENTS:

    * ``(Remote)Branch.copy_content_into`` no longer generates the full revision
      history just to set the last revision info.
      (Andrew Bennetts, John Arbash Meinel)

    * Fetches between formats with different serializers (such as
      pack-0.92-subtree and 1.9-rich-root) are faster now.  This is due to
      operating on batches of 100 revisions at time rather than
      one-by-one.  (Andrew Bennetts, John Arbash Meinel)

    * Search index files corresponding to pack files we've already used
      before searching others, because they are more likely to have the
      keys we're looking for.  This reduces the number of iix and tix
      files accessed when pushing 1 new revision, for instance.
      (John Arbash Meinel)

    * Signatures to transfer are calculated more efficiently in
      ``item_keys_introduced_by``.  (Andrew Bennetts, John Arbash Meinel)
